--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,14 @@
-streamlit
+streamlit>=1.28.0
+pandas>=1.5.0
+numpy>=1.24.0
+geopandas>=0.13.0
+plotly>=5.15.0
+folium>=0.14.0
+streamlit-folium>=0.13.0
+scipy>=1.10.0
+scikit-learn>=1.3.0
+requests>=2.31.0
+Pillow>=9.0.0
+openpyxl>=3.1.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
